Fix image flickering

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -76,3 +76,8 @@ body {
 #qrReaderBody {
     border: 0px !important;
 }
+
+.tall-image {
+    width: 100%;
+    height: 177%;
+}
